[package]
name = "advent_2022"
version = "0.1.0"

[[bin]]
name = "01"
path = "01/calories.rs"

[[bin]]
name = "01-2"
path = "01/calories_two.rs"

[[bin]]
name = "02"
path = "02/rock_paper_scissors.rs"

[[bin]]
name = "02-2"
path = "02/rock_paper_scissors_two.rs"

[[bin]]
name = "03"
path = "03/rucksack.rs"

[[bin]]
name = "03-2"
path = "03/rucksack_two.rs"

[[bin]]
name = "04"
path = "04/cleanup.rs"

[[bin]]
name = "04-2"
path = "04/cleanup_two.rs"

[[bin]]
name = "05"
path = "05/crates.rs"

[[bin]]
name = "05-2"
path = "05/crates_two.rs"

[[bin]]
name = "06"
path = "06/marker.rs"

[[bin]]
name = "06-2"
path = "06/marker_two.rs"

[[bin]]
name = "07"
path = "07/directories.rs"

[[bin]]
name = "07-2"
path = "07/directories_two.rs"

[[bin]]
name = "08"
path = "08/treetops.rs"

[[bin]]
name = "08-2"
path = "08/treetops_two.rs"

[[bin]]
name = "09"
path = "09/rope.rs"

[[bin]]
name = "09-2"
path = "09/rope_two.rs"
